Upgrade bundle and fix tests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,4 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  index:
+    teaser: |
+      With the 60th anniversary of <strong>YFU Germany</strong> we also celebrate many individuals and their diverse engagement for learning in society. YFU volunteers and staff from six decades and close to sixty countries share many experiences and stories. Insights gained through exchange motivate us to advance intercultural understanding, mutural respect, and social responsibility. Our <strong>anniversary conference in Berlin, 15.&ndash;18. June 2017</strong>, demonstrates that in many facets.
