--- a/config/locales/but.de.yml
+++ b/config/locales/but.de.yml
@@ -1,4 +1,7 @@
 de:
+  index:
+    teaser: |
+      Mit 60 Jahren <strong>Deutsches Youth For Understanding Komitee e.V.</strong> feiern wir zugleich viele Einzelne, die sich auf vielfältige Weise für gesellschaftliches Lernen engagieren. YFUler aus sechs Jahrzehnten und bald sechzig Ländern teilen viele Erfahrungen miteinander. Im Austausch gewonnene Einsichten motivieren uns, interkulturelles Verständnis, gegenseitigen Respekt und gesellschaftliche Verantwortung zu fördern. Unser <strong>Jubiläums- und Bundestreffen vom 15.&ndash;18. Juni 2017 in Berlin</strong> zeigt das in vielen Facetten.
   # payment state
   cancelled_without_costs: kostenlos storniert
   cancelled: storniert
