--- a/config/locales/but.en.yml
+++ b/config/locales/but.en.yml
@@ -3,3 +3,34 @@ en:
   index:
     teaser: |
       With the 60<sup>th</sup> anniversary of <strong>YFU Germany</strong> we also celebrate many individuals and their diverse engagement for learning in society. YFU volunteers and staff from six decades and close to sixty countries share many experiences and stories. Insights gained through exchange motivate us to advance intercultural understanding, mutural respect, and social responsibility.<br>Our <strong>anniversary conference in Berlin, 15.&ndash;18. June 2017</strong>, demonstrates that in many facets.
+  team:
+    meet the team:
+      Meet the Team
+    Alex Senger:
+      introduction: ''
+    Cornelius Görres:
+      introduction: ''
+    Felix Naumann:
+      introduction: ''
+    Gerrit Rüdebusch:
+      introduction: ''
+    Henning Perl:
+      introduction: ''
+    Marlena Schultz-Brunn:
+      introduction: ''
+    Matthias Otterbach:
+      introduction: ''
+    Monika Keßler:
+      introduction: ''
+    Nick Modersitzki:
+      introduction: ''
+    Simon Born:
+      introduction: ''
+    Simone Stepp:
+      introduction: ''
+    Stefan Timmermann:
+      introduction: ''
+    Theresa Veer:
+      introduction: ''
+    Yannic Schelletter:
+      introduction: ''
