more layout for team introduction

--- a/config/locales/but.de.yml
+++ b/config/locales/but.de.yml
@@ -8,33 +8,33 @@ de:
     meet the team:
       Das Team stellt sich vor
     Alex Senger:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Cornelius Görres:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Felix Naumann:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Gerrit Rüdebusch:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Henning Perl:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Marlena Schultz-Brunn:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Matthias Otterbach:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Monika Keßler:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Nick Modersitzki:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Simon Born:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Simone Stepp:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Stefan Timmermann:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Theresa Veer:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
     Yannic Schelletter:
-      introduction: ''
+      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
 
   # payment state
   cancelled_without_costs: kostenlos storniert
