add missing header translations

--- a/config/locales/but.en.yml
+++ b/config/locales/but.en.yml
@@ -28,18 +28,18 @@ en:
         The International Conference and Anniversary shows examples and opportunities in YFU and far beyond . A multi-faceted program of and for YFU people and guests has something to offer for anyone interested.
 
     program:
-      title: Programm
+      title: Program
       text: |
         Take part in shaping the International Conference: offer a workshop, a training, a think tank—be it on exchange programs, politics, or philosophy, from arts through best practices to cognition, in sports or in music, or on 60 years YFU! **60@yfu.de**
     educational history tour:
-      title: Educational History Tour für internationale Gäste
+      title: Educational History Tour for international guests
       text: |
         International YFU partners will be invited to an Educational Mystery Tour prior to the conference and ending in Berlin. Different tours (4 days or 11 days) will focus on Germany today and in history.
 
         To help in organizing travel plus overnight stays in host families for the participants and to provide meaningful content we need volunteers all over: **60@yfu.de**
 
     organizing team:
-      title: Organisationsteam
+      title: Organizing Team
       text: |
         Let us know if you have always wanted to help organize a large event for some 300-400 people, or if you have some experience with that. We will let you know in due time what kind of help we need. 
 
