--- a/config/locales/team.de.yml
+++ b/config/locales/team.de.yml
@@ -19,9 +19,8 @@ de:
       introduction: "Ich bin Teil des Teams, um mitzuhelfen, das Jubiläum zu einer vielfältigen Veranstaltung für YFUler aller Altersgruppen, mit den unterschiedlichsten Erfahrungen und aus aller Welt zu machen."
     Felix Naumann:
       job:
-        - Aufgabe
-        - Aufgabe
-      introduction: Lorem ipsum dolor sit amet, felis duis nullam ac suscipit libero, in lacus tortor consequat laoreet viverra, condimentum consectetuer, eget ac commodo donec quis pellentesque varius. Id lobortis proin ac tempus.
+        - Unterstützung der Gesamtorganisation
+      introduction: Für die nächsten 60 Jahre YFU wünsche ich mir, dass wir weiterhin nachhaltig die einen positiven Einfluss auf das Zusammenleben von Menschen haben.
     Gerrit Rüdebusch:
       job:
         - Inhaltliche Programmplanung
