Updates von Cornelius

--- a/config/locales/index.de.yml
+++ b/config/locales/index.de.yml
@@ -1,32 +1,31 @@
 de:
   index:
     teaser_html: |
-      Mit 60 Jahren <strong>Deutsches Youth For Understanding Komitee e.V.</strong> feiern wir zugleich viele Einzelne, die sich auf vielfältige Weise für gesellschaftliches Lernen engagieren. YFUler aus sechs Jahrzehnten und bald sechzig Ländern teilen viele Erfahrungen miteinander. Im Austausch gewonnene Einsichten motivieren uns, interkulturelles Verständnis, gegenseitigen Respekt und gesellschaftliche Verantwortung zu fördern.<br>Unser <strong>Jubiläums- und Bundestreffen vom 15.&ndash;18. Juni 2017 in Berlin</strong> zeigt das in vielen Facetten.
+      Mit 60 Jahren <strong>Deutsches YOUTH FOR UNDERSTANDING Komitee e.V.</strong> feiern wir den Verein und zugleich viele Einzelne, die sich auf vielfältige Weise für gesellschaftliches Lernen engagieren. YFUler aus sechs Jahrzehnten und bald sechzig Ländern teilen viele Erfahrungen miteinander. Im Austausch gewonnene Einsichten motivieren uns, interkulturelles Verständnis, gegenseitigen Respekt und gesellschaftliche Verantwortung zu fördern.<br>Unser <strong>Jubiläum vom 15.&ndash;18. Juni 2017 in Berlin</strong> zeigt das in vielen Facetten.
     we want you_html: |
-      ve vant <strong>you</strong> to make an<br>
-      <strong>impact</strong> on ze <strong>JubiBuT!</strong>
+      ve vant <strong>you</strong> to<br>make an <strong>impact!</strong>
     exchange stories make an impact:
-      title: exchange stories make an impact
+      title: exchange stories make an impact!
       text: |
         Die Austauscherfahrung verändert nachhaltig und wirkt langfristig. Das empfinden jüngere und ältere Ehemalige, und viele wissenschaftliche Studien belegen es.
 
         Ein Festakt in Berlin zu 60 Jahren YFU wird die Geschichte(n) des Jugendaustauschs würdigen. 
     exchange stories:
-      title: exchange stories
+      title: exchange stories!
       text: |
-        Das JubiBuT wird unzählige Gelegenheiten bieten, Erlebnisse aus sechs Jahrzehnten und in bald sechzig Ländern miteinander auszutauschen. 
+        Das Jubiläum wird unzählige Gelegenheiten bieten, Erlebnisse aus sechs Jahrzehnten und in bald sechzig Ländern miteinander auszutauschen. 
 
         Eine besonders schöne Gelegenheit wird die große Party für alle. 
     make an impact:
-      title: make an impact
+      title: make an impact!
       text: |
-        Für viele YFUler war und ist ihre Austausch-erfahrung ein bleibender Ansporn, sich gesell-schaftlich zu engagieren und (ehrenamtlich) Verantwortung zu übernehmen. 
+        Für viele YFUler war und ist ihre Austauscherfahrung ein bleibender Ansporn, sich gesellschaftlich zu engagieren und (ehrenamtlich) Verantwortung zu übernehmen. 
 
-        Das JubiBuT zeigt Beispiele und Möglichkeiten des Engagements innerhalb von YFU und weit darüber hinaus. Ein vielfältiges Programm von YFUlern und Gästen für YFUler und Gäste bietet etwas für alle Interessierten. 
+        Das Jubiläum zeigt Beispiele und Möglichkeiten des Engagements innerhalb von YFU und weit darüber hinaus. Ein vielfältiges Programm von YFUlern und Gästen für YFUler und Gäste bietet etwas für alle Interessierten. 
     program:
       title: Programm
       text: |
-        Beteilige dich an der Gestaltung des JubiBuT und biete einen Workshop, ein Training, eine Ideen-werkstatt an – zu unserer Programmarbeit oder zur Politik, zu Sport und Freizeit, Küche, Kirche oder Kreativem, Nützlichem oder Natürlichem, oder auch zu 60 Jahren YFU! **60@yfu.de**
+        Beteilige dich an der Gestaltung des Jubiläums und biete einen Workshop, ein Training, eine Ideenwerkstatt an &ndash; zu unserer Programmarbeit oder zur Politik, zu Sport und Freizeit, Küche, Kirche oder Kreativem, Nützlichem oder Natürlichem, oder auch zu 60 Jahren YFU! **60@yfu.de**
     educational history tour:
       title: Educational History Tour für internationale Gäste
       text: |
@@ -40,4 +39,4 @@ de:
 
         Wir brauchen helfende Hände für Orga und CI, IT und Infrastruktur, Materialien und Medien, Festakt und Party und tausendundeine Aufgabe in der Jugendherberge: **60@yfu.de**
 
-        [Wer schon mitmacht – Teamvorstellung…](%{team_link})
+        [Wer schon im Team ist...](%{team_link})
