--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -13,10 +13,10 @@ en:
       introduction: “Für die nächsten 60 Jahre YFU wünsche ich mir, dass die Dinge die schon laufen, auch in Zukunft weitergehen.” (Andreas Saebeck, Jubiläumslied 2007)
     Cornelius Görres:
       job:
-        - Communications to international YFU-partners
-        - Travel concept for international guests
-        - Design and content for the homepage
-      introduction: “Ich bin Teil des Teams, um mitzuhelfen, das Jubiläum zu einer vielfältigen Veranstaltung für YFUler aller Altersgruppen, mit den unterschiedlichsten Erfahrungen und aus aller Welt zu machen.”
+        - Communication with international YFU partners
+        - planning of Educational History Tour for international guests
+        - design and content for the homepage
+      introduction: “I am part of the team to help make our Anniversary a multi-faceted conference for YFU people of all ages, with diverse experience, and from all over the world.”
     Felix Naumann:
       job:
         - Management support
