--- a/config/locales/index.de.yml
+++ b/config/locales/index.de.yml
@@ -3,7 +3,7 @@ de:
     teaser_html: |
       Mit 60 Jahren <strong>Deutsches YOUTH FOR UNDERSTANDING Komitee e.V.</strong> feiern wir den Verein und zugleich viele Einzelne, die sich auf vielfältige Weise für gesellschaftliches Lernen engagieren. YFUler aus sechs Jahrzehnten und bald sechzig Ländern teilen viele Erfahrungen miteinander. Im Austausch gewonnene Einsichten motivieren uns, interkulturelles Verständnis, gegenseitigen Respekt und gesellschaftliche Verantwortung zu fördern.<br>Unser <strong>Jubiläum vom 15.&ndash;18. Juni 2017 in Berlin</strong> zeigt das in vielen Facetten.
     we want you_html: |
-      ve vant <strong>you</strong> to<br>make an <strong>impact!</strong>
+      we want <strong>you</strong> to<br>make an <strong>impact!</strong>
     exchange stories make an impact:
       title: exchange stories make an impact!
       text: |
