--- a/config/locales/but.en.yml
+++ b/config/locales/but.en.yml
@@ -1,3 +1,42 @@
 en:
   anniversary: Anniversary 2017
   switch_language: Auf Deutsch
+  sign_in: Sign In
+
+  # payment state
+  cancelled_without_costs: kostenlos storniert
+  cancelled: storniert
+  payed: bezahlt
+  unpayed: nicht bezahlt
+
+  eats_everything: Ich esse alles.
+  vegetarian: vegetarisch
+  vegan: vegan
+  lactose_free: laktosefrei
+  other_diet: 'anderes, nämlich:'
+
+  freestyler: Freestyler
+  kiosk: Kiosk
+  party: Party
+  checkin: An- und Abreise
+  grillen: Grillen
+  ersthelfer: Ersthelfer
+
+  acc_dorm: Mehrbettzimmer mit Bad auf dem Flur
+  acc_dorm_with_bath: Mehrbettzimmer mit eigenem Bad
+  acc_double: Doppelzimmer
+  acc_single: Einzelzimmer
+  acc_family: Familienzimmer
+  acc_none: Ich bin Tagesgast und brauche keine Unterkunft
+
+  sex_male: männlich
+  sex_female: weiblich
+  sex_other: egal
+
+  first_choice: Erste Wahl
+  second_choice: Zweite Wahl
+  third_choice: Dritte Wahl
+
+  other_transportation: "keine Angabe"
+  public_transportation: "mit öffentlichen Verkehrsmitteln"
+  car: "mit dem Auto"
