--- a/config/locales/but.en.yml
+++ b/config/locales/but.en.yml
@@ -1,3 +1,7 @@
 en:
   anniversary: Anniversary 2017
   switch_language: Auf Deutsch
+  back: back
+
+  timetable: Timetable
+  timetable-introduction: Here you find the program of the 60th Anniversary 2017.
