--- a/config/locales/team.de.yml
+++ b/config/locales/team.de.yml
@@ -9,25 +9,22 @@ de:
       job:
         - Anbindung der LG Berlin
         - Unterstützung der IT
-        - Externe Kommunikation
-      introduction: »Für die nächsten 60 Jahre YFU wünsche ich mir, dass die Dinge die schon laufen, auch in Zukunft weitergehen.« (Andreas Saebeck, Jubiläumslied 2007)
+        - externe Kommunikation
+      introduction: »Für die nächsten 60 Jahre YFU wünsche ich mir, dass die Dinge, die schon laufen, auch in Zukunft weitergehen.« (Andreas Saebeck, Jubiläumslied 2007)
     Cornelius Görres:
       job:
         - Vorankündigung für die internationalen YFU-Partner
         - Konzeption der Reise für die internationalen Gäste
         - Mitarbeit an Inhalt und Gestaltung der Homepage
-      introduction: »Ich bin Teil des Teams, um mitzuhelfen, das Jubiläum zu einer vielfältigen Veranstaltung für YFUler aller Altersgruppen, mit den unterschiedlichsten Erfahrungen und aus aller Welt zu machen.«
-    Felix Naumann:
-      job:
-        - Unterstützung der Gesamtorganisation
-      introduction: »Für die nächsten 60 Jahre YFU wünsche ich mir, dass wir weiterhin nachhaltig die einen positiven Einfluss auf das Zusammenleben von Menschen haben.«
+      introduction: »Ich möchte mithelfen, das Jubiläum zu einer vielfältigen Veranstaltung für YFUler aller Altersgruppen, mit den unterschiedlichsten Erfahrungen und aus aller Welt zu machen.«
     Gerrit Rüdebusch:
       job:
         - Inhaltliche Programmplanung
       introduction: »Ich bin Teil des Teams, um mit coolen Leuten zusammen dem Jubiläum Leben zu verleihen.«
     Henning Perl:
       job:
-        - Homepage und IT
+        - Homepage
+        - IT
       introduction: »Austausch wirkt, weil wir nie auslernen und Verständigung und Verständnis überall gebraucht wird.«
     Marlena Schultz-Brunn:
       job:
@@ -35,11 +32,6 @@ de:
         - Organisation und Gestaltung der Rahmenveranstaltungen im Jubiläumsjahr (Rathausempfang und Empfang beim Bundespräsidenten)
         - Einbindung der Freunde und Förderer, die dem Verein nahestehen oder mit YFU kooperieren
       introduction: »Austausch wirkt, weil jeder Einzelne die (YFU-)Welt ein kleines bisschen besser macht!«
-    Matthias Otterbach:
-      job:
-        - Aufgabenfindung
-        - IT
-      introduction: »Für die nächsten 60 Jahre YFU wünsche ich mir, dass wir den Austausch um 60 weitere Länder erweitern können.«
     Monika Keßler:
       job:
         - Finanzen
@@ -63,10 +55,6 @@ de:
       job:
         - Organisation und Gestaltung des Festaktes und der großen Party
       introduction: »Für die nächsten 60 Jahre YFU wünsche ich mir, dass weiterhin viele einzigartige Austauschgeschichten geschrieben werden.«
-    Theresa Veer:
-      job:
-        - Finanzen und Fundraising
-      introduction: »Austausch wirkt, weil sich Menschen nur durch persönliche Erfahrungen verändern.«
     Yannic Schelletter:
       job:
         - Finanzen
