--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -8,45 +8,39 @@ en:
     Alex Senger:
       job:
         - Connections to the local volunteer group in Berlin
-        - Support of IT
-        - External communications
+        - Homepage
+        - IT
+        - external communications
       introduction: “Für die nächsten 60 Jahre YFU wünsche ich mir, dass die Dinge die schon laufen, auch in Zukunft weitergehen.” (Andreas Saebeck, Jubiläumslied 2007)
     Cornelius Görres:
       job:
         - Communication with international YFU partners
         - planning of Educational History Tour for international guests
         - design and content for the homepage
-      introduction: “I am part of the team to help make our Anniversary a multi-faceted conference for YFU people of all ages, with diverse experience, and from all over the world.”
-    Felix Naumann:
-      job:
-        - Management support
-      introduction: “Für die nächsten 60 Jahre YFU wünsche ich mir, dass wir weiterhin nachhaltig die einen positiven Einfluss auf das Zusammenleben von Menschen haben.”
+      introduction: “I want to help make our Anniversary a multi-faceted conference for YFU people of all ages, with diverse experience, and from all over the world.”
     Gerrit Rüdebusch:
       job:
         - Content planning
       introduction: “Ich bin Teil des Teams, um mit coolen Leuten zusammen dem Jubiläum Leben zu verleihen.”
     Henning Perl:
       job:
-        - Homepage and IT
+        - Homepage
+        - IT
       introduction: “Austausch wirkt, weil wir nie auslernen und Verständigung und Verständnis überall gebraucht wird.”
     Marlena Schultz-Brunn:
       job:
         - Fundraising and sponsorships
-        - Organisation und presentation of satellite events (Town Hall reception and reception with the Federal President)
-        - Involvement of YFU friends and sponsors
+        - organisation und presentation of satellite events (Town Hall reception and reception with the Federal President)
+        - involvement of YFU friends and sponsors
       introduction: “Austausch wirkt, weil jeder Einzelne die (YFU-)Welt ein kleines bisschen besser macht!”
-    Matthias Otterbach:
-      job:
-        - IT
-      introduction: “Für die nächsten 60 Jahre YFU wünsche ich mir, dass wir den Austausch um 60 weitere Länder erweitern können.”
     Monika Keßler:
       job:
         - Finance
       introduction: “Austausch wirkt, weil die leuchtenden Augen meiner Gastschwester aus Osteuropa bei diversen Gegebenheiten nicht lügen konnten.”
     Nick Modersitzki:
       job:
-        - Locations for the ceremonial act and the party
-        - Organisation and presentation of the party
+        - Locations for the anniversary reception and the party
+        - organisation and presentation of the party
       introduction: “Ich bin Teil des Teams, um dem Verein und der YFU-Idee eine würdige Geburtstagsfeier zu bescheren.”
     Simon Born:
       job:
@@ -54,18 +48,14 @@ en:
       introduction: “Austausch wirkt, weil durch das Aufeinandertreffen von Personen unterschiedlicher kultureller Prägung ein Verständigungsprozess gefördert und Bewusstsein für Diversität geschaffen wird, welche die Grundsteine für ein friedvolles, verantwortungsbewusstes und auf Respekt basierendes Zusammenleben bilden.”
     Simone Stepp:
       job:
-        - Organisation und presentation of satellite events (Town Hall reception and reception with the Federal President)
-        - Presentation of the ceremonial act
-        - Involvement of YFU alumni
+        - Organisation and presentation of satellite events (city hall reception and reception with the Federal President)
+        - anniversary reception
+        - involvement of YFU alumni
       introduction: “Ich bin Teil des Teams, da ich gerne dabei mithelfen möchte, dass das 60ste YFU-Jubiläum ein großartiges Erlebnis für Ehrenamtliche, Ehemalige und Freunde des Vereins jeden Alters wird.”
     Stefan Timmermann:
       job:
-        - Organisation and presentation of the ceremonial act and the party
+        - Organisation and presentation of the anniversary reception and the party
       introduction: “Für die nächsten 60 Jahre YFU wünsche ich mir, dass weiterhin viele einzigartige Austauschgeschichten geschrieben werden.”
-    Theresa Veer:
-      job:
-        - Finance and Fundraising
-      introduction: “Austausch wirkt, weil sich Menschen nur durch persönliche Erfahrungen verändern.”
     Yannic Schelletter:
       job:
         - Finance
