+ But-Orga as a Job

--- a/config/locales/team.de.yml
+++ b/config/locales/team.de.yml
@@ -35,6 +35,7 @@ de:
     Monika Keßler:
       job:
         - Finanzen
+        - BUT-Organisation
       introduction: »Austausch wirkt, weil die leuchtenden Augen meiner Gastschwester aus Osteuropa bei diversen Gegebenheiten nicht lügen konnten.«
     Nick Modersitzki:
       job:
@@ -54,8 +55,10 @@ de:
     Stefan Timmermann:
       job:
         - Organisation und Gestaltung des Festaktes und der großen Party
+        - BUT-Organisation
       introduction: »Für die nächsten 60 Jahre YFU wünsche ich mir, dass weiterhin viele einzigartige Austauschgeschichten geschrieben werden.«
     Yannic Schelletter:
       job:
         - Finanzen
+        - BUT-Organisation
       introduction: »Austausch wirkt, weil er nachhaltig in jungen Menschen etwas verändert und somit auch in der Gesellschaft. Die Lernchancen des Austauschs sind die beste Möglichkeit, die Bedeutung von interkultureller Verständigung, Respekt und Toleranz zu verstehen und zu leben.«
