--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -36,6 +36,7 @@ en:
     Monika Keßler:
       job:
         - Finance
+        - BUT organisation
       introduction: “Austausch wirkt, weil die leuchtenden Augen meiner Gastschwester aus Osteuropa bei diversen Gegebenheiten nicht lügen konnten.”
     Nick Modersitzki:
       job:
@@ -55,8 +56,10 @@ en:
     Stefan Timmermann:
       job:
         - Organisation and presentation of the anniversary reception and the party
+        - BUT organisation
       introduction: “Für die nächsten 60 Jahre YFU wünsche ich mir, dass weiterhin viele einzigartige Austauschgeschichten geschrieben werden.”
     Yannic Schelletter:
       job:
         - Finance
+        - BUT organisation
       introduction: “Austausch wirkt, weil er nachhaltig in jungen Menschen etwas verändert und somit auch in der Gesellschaft. Die Lernchancen des Austauschs sind die beste Möglichkeit, die Bedeutung von interkultureller Verständigung, Respekt und Toleranz zu verstehen und zu leben.”
