--- a/config/locales/team.de.yml
+++ b/config/locales/team.de.yml
@@ -20,6 +20,7 @@ de:
     Gerrit Rüdebusch:
       job:
         - Inhaltliche Programmplanung
+        - Workshops
       introduction: »Ich bin Teil des Teams, um mit coolen Leuten zusammen dem Jubiläum Leben zu verleihen.«
     Henning Perl:
       job:
@@ -39,8 +40,9 @@ de:
       introduction: »Austausch wirkt, weil die leuchtenden Augen meiner Gastschwester aus Osteuropa bei diversen Gegebenheiten nicht lügen konnten.«
     Nick Modersitzki:
       job:
-        - Raumfindung für Festakt und Party
-        - Organisation und Gestaltung der großen Party
+        - Organisation der Party
+        - inhaltliche Programmplanung
+        - Workshops
       introduction: »Ich bin Teil des Teams, um dem Verein und der YFU-Idee eine würdige Geburtstagsfeier zu bescheren.«
     Simon Born:
       job:
