--- a/config/locales/team.en.yml
+++ b/config/locales/team.en.yml
@@ -20,7 +20,8 @@ en:
       introduction: “I want to help make our Anniversary a multi-faceted conference for YFU people of all ages, with diverse experience, and from all over the world.”
     Gerrit Rüdebusch:
       job:
-        - Content planning
+        - Content-related planning
+        - workshops
       introduction: “Ich bin Teil des Teams, um mit coolen Leuten zusammen dem Jubiläum Leben zu verleihen.”
     Henning Perl:
       job:
@@ -40,9 +41,10 @@ en:
       introduction: “Austausch wirkt, weil die leuchtenden Augen meiner Gastschwester aus Osteuropa bei diversen Gegebenheiten nicht lügen konnten.”
     Nick Modersitzki:
       job:
-        - Locations for the anniversary reception and the party
-        - organisation and presentation of the party
-      introduction: “Ich bin Teil des Teams, um dem Verein und der YFU-Idee eine würdige Geburtstagsfeier zu bescheren.”
+        - party organization
+        - content-related planning
+        - workshops
+      introduction: "“I'm part of the team because I want to have a worthy birthday celebration for YFU Germany and the YFU idea.”"
     Simon Born:
       job:
         - Management
